<resources>
    <string name="app_name">lesson7</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="oh">0</string>
    <string name="plus_and_m">+/-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">X</string>
    <string name="division">/</string>
    <string name="is">=</string>
    <string name="percent">%</string>
    <string name="point">.</string>
    <string name="Ac">AC</string>

</resources>