<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:paddingHorizontal="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cont"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:maxLines="1"

            android:layout_gravity="end|bottom"
            android:textSize="80sp"
            android:text="@string/oh"
            android:textColor="@color/white"
            />
    </FrameLayout>
<LinearLayout
    android:id="@+id/cont"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.button.MaterialButton
            style="@style/grey.Button"
            android:text="@string/Ac"
android:onClick="Result"
            android:id="@+id/Ac"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_and_m"
            style="@style/grey.Button"
            android:layout_marginHorizontal="18dp"
            android:text="@string/plus_and_m"
android:onClick="OnNumberclick"
            />

        <com.google.android.material.button.MaterialButton
         style="@style/grey.Button"
            android:layout_marginEnd="18dp"
            android:id="@+id/proth"
            android:text="@string/percent"
            android:onClick="Result"

            />
        <com.google.android.material.button.MaterialButton
          style="@style/orange.Button"
            android:text="@string/division"
            android:id="@+id/division"
            android:onClick="Result"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:text="@string/seven"
            android:onClick="OnNumberclick"
            android:id="@+id/seven"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginHorizontal="18dp"
            android:onClick="OnNumberclick"
            android:text="@string/eight"
            android:id="@+id/eight"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginEnd="18dp"
            android:onClick="OnNumberclick"
            android:text="@string/nine"
            android:id="@+id/nine"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/orange.Button"
            android:onClick="Result"
            android:id="@+id/multiplication"
            android:text="@string/multiplication"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:text="@string/four"
            android:id="@+id/four"
            android:onClick="OnNumberclick"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginHorizontal="18dp"
            android:onClick="OnNumberclick"
            android:text="@string/five"
            android:id="@+id/five"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginEnd="18dp"
            android:onClick="OnNumberclick"
            android:text="@string/six"
android:id="@+id/six"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/orange.Button"
            android:id="@+id/minus"
            android:onClick="Result"
            android:text="@string/minus"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:text="@string/one"
         android:id="@+id/one"
         android:onClick="OnNumberclick"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:id="@+id/two"
            android:layout_marginHorizontal="18dp"
            android:onClick="OnNumberclick"
            android:text="@string/two"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginEnd="18dp"
            android:onClick="OnNumberclick"
            android:id="@+id/three"
            android:text="@string/three"

            />
        <com.google.android.material.button.MaterialButton
            style="@style/orange.Button"
            android:text="@string/plus"
            android:onClick="Result"
            android:id="@+id/plus"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:text="@string/oh"
            android:onClick="OnNumberclick"
            android:layout_weight="2"
            android:id="@+id/oh"
            android:layout_width="18dp"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/grey_dark.Button"
            android:layout_marginHorizontal="18dp"
            android:id="@+id/point"
            android:text="@string/point"
            android:onClick="OnNumberclick"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is"
            style="@style/orange.Button"
            android:onClick="ResultTop"
            android:text="@string/is" />
    </LinearLayout>
</LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>